[tool.poetry]
name = "learn_api_basics"
version = "0.1.0"
description = ""
authors = ["Tammo Feldmann <31222040+Tammo-Feldmann@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
